# breaking_brain_api

./: .gitignore  CHANGELOG.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
authentication/: models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_tags.py  0003_user_favorites.py  0004_user_bought_quizzes.py
authentication/test/: test_views.py
breaking_brain_api/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  test_tasks.py  tests.py  urls.py  wsgi.py
quizzes/: admin.py  documents.py  models.py  search.py  serializers.py  tests.py  urls.py  utils.py  views.py
quizzes/migrations/: 0001_initial.py  0002_auto_20210301_2014.py  0003_lesson.py  0004_auto_20210613_1723.py
recommendation_system/: models.py  schemas.py  urls.py  utils.py  views.py
results/: models.py  serializers.py  tests.py  urls.py  views.py
results/migrations/: 0001_initial.py
search/: schemas.py  signals.py  tests.py  urls.py  utils.py  views.py
users/: serializers.py  tests.py  urls.py  views.py
